--- a/3hw/index.html
+++ b/3hw/index.html
@@ -25,7 +25,7 @@
                 <h5>Generate a Password</h5>
             </div>
             <div class="card-body">
-                <div class="text-center">
+                <div class="text-center" id="pW">
                     <p>Your Secure Password</p>
                 </div>
             </div>
